# GeisterCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
adapter/: CMakeLists.txt  coreadapter.cpp
